fix tooltips crashing when looking at them right when jei loads